--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 
 <body>
-    <h1>Ahmed Raza</h1>
-    <nav>
-        <a href="#">One</a>
-        <a href="#">Two</a>
-        <a href="#">Three</a>
-        <a href="#">Four</a>
-    </nav>
+    <header>
+        <h1>Ahmed Raza</h1>
+        <nav>
+            <a href="#">One</a>
+            <a href="#">Two</a>
+            <a href="#">Three</a>
+            <a href="#">Four</a>
+        </nav>
+    </header>
     <section>
         <h2>Favourite Foods</h2>
         <ul>
@@ -25,26 +27,22 @@
         <section>
             <h2>Achievements</h2>
             <p>Progress in this course (100%)
-                <meter value="10" min="0" max="10"></meter>
-            </p>
-            <p>Progress in this Specialization capstone (20%)
-                <meter value="2" min="0" max="10"></meter>
-            </p>
-            <p>Progress in this life goals (40%)
-                <meter value="4" min="0" max="10"></meter>
+                <progress value="1"></progress> <br> Progress in this Specialization capstone (20%)
+                <progress value="2" max="10"></progress> <br> Progress in this life goals (40%)
+                <progress value="4" max="10"></progress>
             </p>
         </section>
         <section>
             <h2>More About Me</h2>
         </section>
-        <details>
+        <details open>
             <summary>My childhood</summary>
             <p>I born and bread in Lahore Pakistan.</p>
         </details>
     </section>
     <footer>
-        <p><img src="img/logo.png" alt="The Image of my logo"> This page was created by Ahmed Raza and Collen van Lent. To learn
-            more about web design, visite <a href="#">Intro to Web Design.</a></p>
+        <p><img src="http://www.intro-webdesign.com/images/newlogo.png" alt="The Image of my logo"> This page was created by
+            Ahmed Raza and Collen van Lent. To learn more about web design, visite <a href="#">Intro to Web Design.</a></p>
 
     </footer>
 </body>
